<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="0dp">

    <Button
        android:id="@+id/lanime_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_selector"
        android:drawableEnd="@drawable/button_yjt"
        android:src="@drawable/shape"
        android:text="@string/firstStepEnableLanIme"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/appFrequencybutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lanime_button1"
        android:layout_gravity="center"
        android:background="@drawable/button_selector"
        android:drawableEnd="@drawable/button_yjt"
        android:drawableRight="@drawable/button_yjt"
        android:src="@drawable/shape"
        android:text="@string/applicationFrequency"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/appAliasbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appFrequencybutton1"
        android:layout_gravity="center"
        android:background="@drawable/button_selector"
        android:drawableEnd="@drawable/button_yjt"
        android:drawableRight="@drawable/button_yjt"
        android:src="@drawable/shape"
        android:text="@string/applicationAlias"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/myAccountbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appAliasbutton1"
        android:layout_gravity="center"
        android:background="@drawable/button_selector"
        android:drawableEnd="@drawable/button_yjt"
        android:drawableRight="@drawable/button_yjt"
        android:src="@drawable/shape"
        android:text="@string/myAccount"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/ratelanime_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/myAccountbutton1"
        android:layout_gravity="center"
        android:background="@drawable/button_selector"
        android:drawableEnd="@drawable/button_yjt"
        android:drawableRight="@drawable/button_yjt"
        android:src="@drawable/shape"
        android:text="@string/rateUs"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/builtinShortcutscheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ratelanime_button1"
        android:text="@string/builtinShortcuts" />

    <CheckBox
        android:id="@+id/hiveLayoutinShortcutscheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/builtinShortcutscheckBox"
        android:text="@string/hiveLayout" />


</RelativeLayout>