<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:theme="@android:style/Theme.Wallpaper"

    >

    <ImageView
        android:id="@+id/applicationIconrightimageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/applicationIcon"
        android:src="@drawable/vector_66_11" />

<TextView
android:id="@+id/rightTextoperationMethodactTitletextView2"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignParentBottom="false"
android:layout_alignParentLeft="false"
android:layout_alignParentStart="false"
android:layout_alignParentRight="false"
android:layout_alignParentEnd="false"
android:layout_alignParentTop="false"
android:text="@string/empty"
android:layout_centerHorizontal="true"
android:layout_below="@+id/applicationIconrightimageView2"
android:gravity="center_horizontal"
style="@style/AudioFileInfoOverlayText"
android:background="@drawable/back" />

    <TextView
        android:id="@+id/shortcutAddedtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rightTextoperationMethodactTitletextView2"
        android:layout_centerHorizontal="true"
        android:text="@string/shortcutAdded" />

    <Button
        android:id="@+id/okbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shortcutAddedtextView"
        android:layout_centerHorizontal="true"
        android:text="@android:string/ok" />
</RelativeLayout>