<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/x2bgcolor" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="vertical"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/notice_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:src="@drawable/icon" />
            </LinearLayout>
            
            <TextView
                android:id="@+id/emailRegistertextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:gravity="right"
                android:text="@string/loginUsePhoneNumber"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/emailRegisterColor" />
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/white" >

                <TextView
                    android:id="@+id/countrytextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/country"
                    android:textColor="@color/x2bgcolor"
                    android:textSize="21sp" />

                <EditText
                    android:id="@+id/welcome_logon"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="100dp"
                    android:layout_marginTop="5.0dip"
                    android:background="@color/white"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/emailAddress"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="21sp" >

                    <requestFocus />
                </EditText>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:layout_marginTop="10.0dip"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/welcome_logon_pwd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:hint="@string/enterPassword"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="21sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30.0dip"
                    android:layout_marginRight="30.0dip"
                    android:layout_marginTop="20.0dip"
                    android:background="@drawable/login_button_bg_01"
                    android:text="@string/login_in"
                    android:textColor="@color/white"
                    android:textSize="20.0sp" />

                <Button
                    android:id="@+id/registerbutton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_button_bg_01"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progressbar"
        android:visibility="gone" />

    <TextView
        android:id="@+id/forgotPasswordtextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/scrollView1"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="18dp"
        android:text="@string/forgotPassword" />

</RelativeLayout>