<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/x2bgcolor" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="vertical"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:orientation="horizontal" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:layout_marginTop="10.0dip"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/welcome_logon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:hint="@string/inputValidationCode"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/x2bgcolor"
                    android:textSize="21sp" />

                <Button
                    android:id="@+id/sendValidationCodeButton1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/action_sheet_content_bg"
                    android:padding="5dp"
                    android:text="@string/sendValidationCode"
                    android:textColor="@color/white"
                    android:textSize="21sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/white" >

                <ToggleButton
                    android:id="@+id/showPasswordToggleButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/eyetogglebuttondrawable"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:textOff="@string/emptyString"
                    android:textOn="@string/emptyString" />

                <EditText
                    android:id="@+id/passwordEditText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="false"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="48dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    android:hint="@string/setPassword"
                    android:inputType="textPassword" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/registerbutton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_button_bg_01"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progressbar"
        android:visibility="gone" />

</RelativeLayout>